--- a/KenffySoft.Bloggy/KenffySoft.Bloggy/KenffySoft.Bloggy.csproj
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy/KenffySoft.Bloggy.csproj
@@ -65,6 +65,9 @@
     <EmbeddedResource Update="Views\InvitationsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\NotificationsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PostDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
