fix infinite scroll homepage

--- a/KenffySoft.Bloggy/KenffySoft.Bloggy.Android/KenffySoft.Bloggy.Android.csproj
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy.Android/KenffySoft.Bloggy.Android.csproj
@@ -241,6 +241,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\defaultprofile.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\defaultImage.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
