--- a/KenffySoft.Bloggy/KenffySoft.Bloggy.iOS/KenffySoft.Bloggy.iOS.csproj
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy.iOS/KenffySoft.Bloggy.iOS.csproj
@@ -154,7 +154,7 @@
       <Version>5.0.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.CommunityToolkit">
-      <Version>1.1.0</Version>
+      <Version>1.2.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
@@ -279,6 +279,15 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\defaultImage.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\network.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\lock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\world.png" />
   </ItemGroup>
   <ProjectExtensions>
     <VisualStudio>
